as 'samba-tool domain provision' the arguments are still
the same.

The 'updateprovision' script was renamed to 'samba_upgradeprovision'.

We changed the default dns implementation to the internal dns server
(SAMBA_INTERNAL). BIND9_FLATFILE and BIND9_DLZ are still available,
but you'll have to add '-dns' to the 'server services' option
to disable the internal dns server.

CHANGES SINCE beta7
=====================

For a list of changes since beta7, please see the git log.

$ git clone git://git.samba.org/samba.git
$ cd samba.git
$ git log samba-4.0.0beta7..samba-4.0.0beta8

Some major user-visible changes include:

- A fix for a segfault/abort on startup of the 'samba' binary in the
  credentials_secrets code. 

- A fix for samba-tool classicupgrade of pdb_ldap-based domains

- A fix for samba-tool domain exportkeyab only exporting DES keys

- Printing is now enabled on the AD DC

- Fix bug #9124 - Samba fails to set "inherited" bit on inherited ACE's.

- We now avoid printing secret attributes (such as unicodePwd and
  suppliementalCredentials) in ldb trace logs

- s3-printing: fix bug 9123 lprng job tracking errors

- A fix for building with MIT Kerberos

KNOWN ISSUES
============

- 'samba-tool domain classicupgrade' will fail when setting ACLs on
  the GPO folders with NT_STATUS_INVALID_ONWER in the default
  configuration.  This happens if, as is typical a 'domain admins'
  group (-512) is mapped in the passdb backend being upgraded.  This
  is because the group mapping to a GID only prevents Samba from
  allocating a uid for that group.  The uid is needed so the 'domain
  admins' group can own the GPO file objects.

  To work around this issue, remove the 'domain admins' group before
  upgrade, as it will be re-created automatically.  You will
  of course need to fill in the group membership again.  A future release
  will make this automatic, or find some other workaround.

- This release makes the s3fs file server the default, as this is the